@@ -1,10 +1,14 @@
 package uk.gov.pay.connector.gateway.util;
 
-import com.google.common.collect.ImmutableMap;
 import uk.gov.pay.connector.app.StripeAuthTokens;
 import uk.gov.pay.connector.app.StripeGatewayConfig;
+import uk.gov.pay.connector.gatewayaccount.model.EpdqCredentials;
+import uk.gov.pay.connector.gatewayaccount.model.GatewayCredentials;
+import uk.gov.pay.connector.gatewayaccount.model.WorldpayCredentials;
+import uk.gov.pay.connector.gatewayaccount.model.WorldpayMerchantCodeCredentials;
 import uk.gov.pay.connector.gatewayaccount.model.WorldpayValidatableCredentials;
 import uk.gov.pay.connector.gatewayaccountcredentials.exception.MissingCredentialsForRecurringPaymentException;
+import uk.gov.pay.connector.gatewayaccountcredentials.exception.NoCredentialsInUsableStateException;
 import uk.gov.service.payments.commons.model.AuthorisationMode;
 
 import java.util.Base64;
@@ -12,11 +16,6 @@ import java.util.Map;
 
 import static java.lang.String.format;
 import static javax.ws.rs.core.HttpHeaders.AUTHORIZATION;
-import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccount.CREDENTIALS_MERCHANT_CODE;
-import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccount.CREDENTIALS_MERCHANT_ID;
-import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccount.CREDENTIALS_PASSWORD;
-import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccount.CREDENTIALS_USERNAME;
-import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccount.RECURRING_MERCHANT_INITIATED;
 
 public class AuthUtil {
     private static final String STRIPE_VERSION_HEADER = "Stripe-Version";
@@ -25,10 +24,6 @@ public class AuthUtil {
     // We are using a separate version as searching payment intents is only supported in newer API versions.
     // This is intended as a temporary solution, and we intend to move all requests to use the same API version.
     public static final String STRIPE_SEARCH_PAYMENT_INTENTS_API_VERSION = "2020-08-27";
-
-    private static String encode(String username, String password) {
-        return "Basic " + Base64.getEncoder().encodeToString(new String(username + ":" + password).getBytes());
-    }
 
     public static Map<String, String> getStripeAuthHeaderForPaymentIntentSearch(StripeGatewayConfig stripeGatewayConfig, boolean isLiveAccount) {
         return getStripeAuthHeaderWithApiVersion(stripeGatewayConfig, isLiveAccount, STRIPE_SEARCH_PAYMENT_INTENTS_API_VERSION);
@@ -41,53 +36,87 @@ public class AuthUtil {
     private static Map<String, String> getStripeAuthHeaderWithApiVersion(StripeGatewayConfig stripeGatewayConfig, boolean isLiveAccount, String apiVersion) {
         StripeAuthTokens authTokens = stripeGatewayConfig.getAuthTokens();
         String value = format("Bearer %s", isLiveAccount ? authTokens.getLive() : authTokens.getTest());
-        return ImmutableMap.of(
+        return Map.of(
                 AUTHORIZATION, value,
                 STRIPE_VERSION_HEADER, apiVersion
         );
     }
 
-    public static String getWorldpayMerchantCode(Map<String, Object> gatewayCredentials, AuthorisationMode authorisationMode) {
-        if (authorisationMode == AuthorisationMode.AGREEMENT) {
-            if (gatewayCredentials.get(RECURRING_MERCHANT_INITIATED) == null) {
-                throw new MissingCredentialsForRecurringPaymentException();
+    public static String getWorldpayMerchantCode(GatewayCredentials credentials, AuthorisationMode authorisationMode, boolean isRecurring) {
+        WorldpayCredentials worldpayCredentials = castGatewayCredentialsToWorldpayCredentials(credentials);
+        if (isRecurring) {
+            if (authorisationMode == AuthorisationMode.AGREEMENT) {
+                return worldpayCredentials.getRecurringMerchantInitiatedCredentials()
+                        .map(WorldpayMerchantCodeCredentials::getMerchantCode)
+                        .orElseThrow(MissingCredentialsForRecurringPaymentException::new);
             }
-            Map<String, Object> recurringCreds = (Map<String, Object>) gatewayCredentials.get(RECURRING_MERCHANT_INITIATED);
-
-            return recurringCreds.get(CREDENTIALS_MERCHANT_CODE).toString();
+            return worldpayCredentials.getRecurringCustomerInitiatedCredentials()
+                    .map(WorldpayMerchantCodeCredentials::getMerchantCode)
+                    .orElseThrow(MissingCredentialsForRecurringPaymentException::new);
         }
-        return gatewayCredentials.get(CREDENTIALS_MERCHANT_ID).toString();
+
+        return worldpayCredentials.getOneOffCustomerInitiatedCredentials()
+                .map(WorldpayMerchantCodeCredentials::getMerchantCode)
+                .orElseGet(() -> worldpayCredentials.getLegacyOneOffCustomerInitiatedMerchantCode()
+                        .orElseThrow(NoCredentialsInUsableStateException::new));
     }
 
-    public static String getWorldpayMerchantCodeForManagingTokens(Map<String, Object> gatewayCredentials) {
-        return gatewayCredentials.get(CREDENTIALS_MERCHANT_ID).toString();
-    }
+    public static Map<String, String> getWorldpayAuthHeader(GatewayCredentials credentials, AuthorisationMode authorisationMode, boolean isRecurring) {
+        WorldpayCredentials worldpayCredentials = castGatewayCredentialsToWorldpayCredentials(credentials);
 
-    public static Map<String, String> getGatewayAccountCredentialsAsAuthHeader(Map<String, Object> gatewayCredentials) {
-        String value = encode(gatewayCredentials.get(CREDENTIALS_USERNAME).toString(), gatewayCredentials.get(CREDENTIALS_PASSWORD).toString());
-        return ImmutableMap.of(AUTHORIZATION, value);
-    }
-
-    public static Map<String, String> getGatewayAccountCredentialsAsAuthHeader(Map<String, Object> gatewayCredentials, AuthorisationMode authorisationMode) {
-        if (authorisationMode == AuthorisationMode.AGREEMENT) {
-            if (gatewayCredentials.get(RECURRING_MERCHANT_INITIATED) == null) {
-                throw new MissingCredentialsForRecurringPaymentException();
+        if (isRecurring) {
+            if (authorisationMode == AuthorisationMode.AGREEMENT) {
+                return worldpayCredentials.getRecurringMerchantInitiatedCredentials()
+                        .map(AuthUtil::getWorldpayAuthHeader)
+                        .orElseThrow(MissingCredentialsForRecurringPaymentException::new);
             }
-            Map<String, Object> recurringCreds = (Map<String, Object>) gatewayCredentials.get(RECURRING_MERCHANT_INITIATED);
-            String value = encode(recurringCreds.get(CREDENTIALS_USERNAME).toString(), recurringCreds.get(CREDENTIALS_PASSWORD).toString());
-            return ImmutableMap.of(AUTHORIZATION, value);
+            return worldpayCredentials.getRecurringCustomerInitiatedCredentials()
+                    .map(AuthUtil::getWorldpayAuthHeader)
+                    .orElseThrow(MissingCredentialsForRecurringPaymentException::new);
         }
-        String value = encode(gatewayCredentials.get(CREDENTIALS_USERNAME).toString(), gatewayCredentials.get(CREDENTIALS_PASSWORD).toString());
-        return ImmutableMap.of(AUTHORIZATION, value);
+
+        return worldpayCredentials.getOneOffCustomerInitiatedCredentials()
+                .map(AuthUtil::getWorldpayAuthHeader)
+                .orElseGet(() -> {
+                    String username = worldpayCredentials.getLegacyOneOffCustomerInitiatedUsername().orElseThrow(NoCredentialsInUsableStateException::new);
+                    String password = worldpayCredentials.getLegacyOneOffCustomerInitiatedPassword().orElseThrow(NoCredentialsInUsableStateException::new);
+                    return getAuthHeader(username, password);
+                });
     }
 
-    public static Map<String, String> getGatewayAccountCredentialsForManagingTokensAsAuthHeader(Map<String, Object> gatewayCredentials) {
-        String value = encode(gatewayCredentials.get(CREDENTIALS_USERNAME).toString(), gatewayCredentials.get(CREDENTIALS_PASSWORD).toString());
-        return ImmutableMap.of(AUTHORIZATION, value);
+    private static Map<String, String> getWorldpayAuthHeader(WorldpayMerchantCodeCredentials creds) {
+        return getAuthHeader(creds.getUsername(), creds.getPassword());
     }
-    
+
+    public static Map<String, String> getGatewayAccountCredentialsForManagingTokensAsAuthHeader(GatewayCredentials credentials) {
+        WorldpayCredentials worldpayCredentials = castGatewayCredentialsToWorldpayCredentials(credentials);
+        WorldpayMerchantCodeCredentials recurringCustomerInitiatedCredentials = worldpayCredentials.getRecurringCustomerInitiatedCredentials()
+                .orElseThrow(MissingCredentialsForRecurringPaymentException::new);
+        return getWorldpayAuthHeader(recurringCustomerInitiatedCredentials);
+    }
+
+    private static WorldpayCredentials castGatewayCredentialsToWorldpayCredentials(GatewayCredentials credentials) {
+        if (!(credentials instanceof WorldpayCredentials)) {
+            throw new IllegalArgumentException("Expected provided GatewayCredentials to be of type WorldpayCredentials");
+        }
+        return (WorldpayCredentials) credentials;
+    }
+
     public static Map<String, String> getWorldpayCredentialsCheckAuthHeader(WorldpayValidatableCredentials worldpayValidatableCredentials) {
-        String value = encode(worldpayValidatableCredentials.getUsername(), worldpayValidatableCredentials.getPassword());
-        return ImmutableMap.of(AUTHORIZATION, value);
+        return getAuthHeader(worldpayValidatableCredentials.getUsername(), worldpayValidatableCredentials.getPassword());
     }
+
+    public static Map<String, String> getEpdqAuthHeader(GatewayCredentials credentials) {
+        if (!(credentials instanceof EpdqCredentials)) {
+            throw new IllegalArgumentException("Expected provided GatewayCredentials to be of type EpdqCredentials");
+        }
+        var epdqCredentials = (EpdqCredentials) credentials;
+        return getAuthHeader(epdqCredentials.getUsername(), epdqCredentials.getPassword());
+    }
+
+    private static Map<String, String> getAuthHeader(String username, String password) {
+        String value = "Basic " + Base64.getEncoder().encodeToString(new String(username + ":" + password).getBytes());
+        return Map.of(AUTHORIZATION, value);
+    }
+
 }
